--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "date-fns": "^2.29.3"
+  },
   "packageManager": "yarn@1.22.19",
   "lint-staged": {
     "**/*.ts*": [
