--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "w": "yarn workspace"
   },
   "devDependencies": {
+    "@prisma/client": "^4.12.0",
     "eslint-config-custom": "*",
     "husky": ">=6",
     "lint-staged": ">=10",
     "prettier": "latest",
+    "prisma": "^4.12.0",
     "turbo": "^1.6.3"
   },
   "engines": {
