--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,24 @@ services:
     environment:
       - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres?schema=public&connect_timeout=10
     depends_on:
+      server:
+        condition: service_started
+      db:
+        condition: service_started
+  server:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - ./:/workspaces
+      - node_modules:/workspaces/node_modules
+    working_dir: /workspaces
+    ports:
+      - ${DEV_PORT_SERVER:-3001}:3001
+    environment:
+      - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres?schema=public&connect_timeout=10
+    command: "yarn workspace server start"
+    depends_on:
       db:
         condition: service_started
   db:
