--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node --experimental-loader=ts-node/esm --es-module-specifier-resolution=node src/index.ts",
+    "dev": "yarn start",
     "lint": "TIMING=1 eslint .",
     "type-check": "tsc --noEmit"
   },
