add event save form

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@acab/reset.css": "^0.5.3",
     "@emotion/react": "^11.10.5",
     "domain": "*",
+    "infra": "*",
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
