--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     environment:
       - TZ=${TZ:-}
       - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres?schema=public&connect_timeout=10
+      - PEPPER=${PEPPER:-dev}
     depends_on:
       db:
         condition: service_started
