--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-modal": "^3.16.0",
     "eslint-config-custom": "*",
     "react": "^18.2.0",
     "tsconfig": "*",
@@ -20,6 +21,7 @@
     "@acab/reset.css": "^0.5.3",
     "@emotion/react": "^11.10.5",
     "@types/react-calendar": "^3.9.0",
-    "react-calendar": "^4.2.1"
+    "react-calendar": "^4.2.1",
+    "react-modal": "^3.16.1"
   }
 }
