--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,10 +18,10 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@acab/reset.css": "^0.5.3",
     "@emotion/react": "^11.10.5",
     "@types/react-calendar": "^3.9.0",
     "react-calendar": "^4.2.1",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "sanitize.css": "^13.0.0"
   }
 }
