--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "nodemon -w . -w ../../packages src/index.ts",
+    "build-lambda": "esbuild src/lambda.ts --bundle --minify --sourcemap --platform=node --target=es2020 --outfile=dist/index.js",
     "lint": "TIMING=1 eslint .",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13"
+    "@types/cors": "^2.8.13",
+    "esbuild": "^0.17.18"
   },
   "dependencies": {
     "@trpc/server": "^10.20.0",
