update deploy setting

--- a/.github/workflows/push_server_image.yml
+++ b/.github/workflows/push_server_image.yml
@@ -19,12 +19,12 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.ENV_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ENV_AWS_SECRET_ACCESS_KEY }}
           AWS_ECR_HOST: ${{ secrets.ENV_AWS_ECR_HOST }}
-        run: aws ecr get-login-password --region ap-northeast-1 | docker login --username AWS --password-stdin ${AWS_ECR_HOST}
+        run: aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${AWS_ECR_HOST}
 
       - name: Build
         env:
           REGISTRY_NAME: ${{ secrets.ENV_REGISTRY_NAME }}
-        run: docker build -f ./deploy/lambda/Dockerfile -t ${REGISTRY_NAME} .
+        run: docker build -f ./deploy/lambda/Dockerfile -t ${REGISTRY_NAME} --platform=x86_64 .
 
       - name: Push
         env:
