--- a/turbo.json
+++ b/turbo.json
@@ -17,7 +17,10 @@
       ],
       "env": [
         "NODE_ENV",
-        "PEPPER"
+        "PEPPER_USER",
+        "PEPPER_EVENT",
+        "URL_APP",
+        "NEXT_PUBLIC_URL_API"
       ]
     },
     "lint": {
