--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -11,12 +11,14 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
+    "@types/uuid": "^9.0.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0"
   },
   "dependencies": {
     "eslint-config-custom": "*",
     "tsconfig": "*",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "uuid": "^9.0.0"
   }
 }
