--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@types/react-calendar": "^3.9.0",
+    "@uiball/loaders": "^1.2.6",
     "react-calendar": "^4.2.1",
     "react-modal": "^3.16.1",
     "sanitize.css": "^13.0.0"
