--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,6 +19,9 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-calendar": "^3.9.0",
     "@uiball/loaders": "^1.2.6",
     "destyle.css": "^4.0.0",
