--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.1.0",
     "domain": "*",
     "infra": "*",
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "ui": "*"
   },
   "devDependencies": {
