--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "test": "jest",
     "dev": "next dev",
     "build": "next build",
     "build-static": "next build && next export",
@@ -24,10 +25,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "eslint-config-custom": "*",
+    "jest": "^29.5.0",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.1.0",
     "tsconfig": "*",
     "typescript": "^4.9.5"
   }
