--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -7,6 +7,7 @@
       "@/*": ["./src/*"]
     },
     "experimentalDecorators": true,
-    "typeRoots": ["../../packages/ui/src/@types/"]
+    "typeRoots": ["../../packages/ui/src/@types/"],
+    "types": ["...", "@types/jest"]
   }
 }
