--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -9,7 +9,11 @@
     "lint": "TIMING=1 eslint .",
     "type-check": "tsc --noEmit"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/jest": "^29.5.1",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0"
+  },
   "dependencies": {
     "@trpc/client": "^10.20.0",
     "@trpc/server": "^10.20.0",
