--- a/.github/workflows/production_deploy_s3.yml
+++ b/.github/workflows/production_deploy_s3.yml
@@ -18,12 +18,15 @@ jobs:
         run: |
           rm -rf ./apps/workshop
           rm -rf ./apps/server
+          rm -rf ./apps/ogp
 
       - name: Install Dependencies
         run: yarn workspace web install
 
       - name: Build
-        run: yarn workspace web build-static
+        run: |
+          yarn workspace web build-static
+          rm -rf ./apps/web/out/e/\[p\]/
 
       - name: Deploy
         env:
