--- a/.github/workflows/upload_lambda_edge.yml
+++ b/.github/workflows/upload_lambda_edge.yml
@@ -23,6 +23,9 @@ jobs:
         if: ${{ inputs.environment == 'staging' }}
         run: |
           echo "AWS_LAMBDA_FUNCTION_ARN=${{ secrets.STAGING_AWS_LAMBDA_EDGE_RESPONSE_HEADER_ARN }}" >> $GITHUB_ENV
+          echo "DATABASE_URL=${{ secrets.STAGING_DATABASE_URL }}" >> $GITHUB_ENV
+          echo "PEPPER_EVENT=${{ secrets.STAGING_AWS_LAMBDA_EDGE_RESPONSE_HEADER_ARN }}" >> $GITHUB_ENV
+          echo "SITE_DOMAIN=${{ secrets.STAGING_AWS_LAMBDA_EDGE_RESPONSE_HEADER_ARN }}" >> $GITHUB_ENV
 
       - name: Setup node
         uses: actions/setup-node@v3
@@ -40,7 +43,10 @@ jobs:
 
       - name: Build
         run: yarn workspace edge build-lambda
-      
+
+      - name: Pur ENV
+        run: echo -e "DATABASE_URL=\"${{ env.DATABASE_URL }}\"\nPEPPER_EVENT=\"${{ env.PEPPER_EVENT }}\"\nSITE_DOMAIN=\"${{ env.SITE_DOMAIN }}\"" > ./apps/edge/dist/.env
+
       - name: Zip function code
         run: zip -rj lambda.zip ./apps/edge/dist
 
@@ -48,6 +54,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.ENV_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ENV_AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: "us-east-1"
         run: aws lambda update-function-code --function-name ${{ env.AWS_LAMBDA_FUNCTION_ARN }} --zip-file fileb://lambda.zip
 
       - name: Wait for update-function-code completion
@@ -55,6 +62,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.ENV_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ENV_AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: "us-east-1"
         run: |
           while :; \
           do \
@@ -78,4 +86,5 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.ENV_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ENV_AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: "us-east-1"
         run: aws lambda publish-version --function-name ${{ env.AWS_LAMBDA_FUNCTION_ARN }}
