--- a/.github/workflows/upload_lambda_edge.yml
+++ b/.github/workflows/upload_lambda_edge.yml
@@ -19,13 +19,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set constants for staging
+      - name: Set Env for staging
         if: ${{ inputs.environment == 'staging' }}
         run: |
           echo "AWS_LAMBDA_FUNCTION_ARN=${{ secrets.STAGING_AWS_LAMBDA_EDGE_RESPONSE_HEADER_ARN }}" >> $GITHUB_ENV
           echo "DATABASE_URL=${{ secrets.STAGING_DATABASE_URL }}" >> $GITHUB_ENV
-          echo "PEPPER_EVENT=${{ secrets.STAGING_AWS_LAMBDA_EDGE_RESPONSE_HEADER_ARN }}" >> $GITHUB_ENV
-          echo "SITE_DOMAIN=${{ secrets.STAGING_AWS_LAMBDA_EDGE_RESPONSE_HEADER_ARN }}" >> $GITHUB_ENV
+          echo "PEPPER_EVENT=${{ secrets.STAGING_PEPPER_EVENT }}" >> $GITHUB_ENV
+          echo "SITE_DOMAIN=${{ secrets.STAGING_SITE_DOMAIN }}" >> $GITHUB_ENV
+
+      - name: Set Env for production
+        if: ${{ inputs.environment == 'production' }}
+        run: |
+          echo "AWS_LAMBDA_FUNCTION_ARN=${{ secrets.PRODUCTION_AWS_LAMBDA_EDGE_RESPONSE_HEADER_ARN }}" >> $GITHUB_ENV
+          echo "DATABASE_URL=${{ secrets.PRODUCTION_DATABASE_URL }}" >> $GITHUB_ENV
+          echo "PEPPER_EVENT=${{ secrets.PRODUCTION_PEPPER_EVENT }}" >> $GITHUB_ENV
+          echo "SITE_DOMAIN=${{ secrets.PRODUCTION_SITE_DOMAIN }}" >> $GITHUB_ENV
 
       - name: Setup node
         uses: actions/setup-node@v3
