--- a/.github/workflows/deploy_lambda_edge.yml
+++ b/.github/workflows/deploy_lambda_edge.yml
@@ -23,13 +23,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set constants for staging
+      - name: Set env for staging
         if: ${{ inputs.environment == 'staging' }}
         run: |
           echo "AWS_LAMBDA_FUNCTION_ARN=${{ secrets.STAGING_AWS_LAMBDA_EDGE_RESPONSE_HEADER_ARN }}" >> $GITHUB_ENV
           echo "AWS_CLOUDFRONT_DISTRIBUTION_ID=${{ secrets.STAGING_AWS_CF_ID }}" >> $GITHUB_ENV
 
-      - name: Set constants for production
+      - name: Set env for production
         if: ${{ inputs.environment == 'production' }}
         run: |
           echo "AWS_LAMBDA_FUNCTION_ARN=${{ secrets.PRODUCTION_AWS_LAMBDA_EDGE_RESPONSE_HEADER_ARN }}" >> $GITHUB_ENV
