--- a/.github/workflows/upload_lambda_edge.yml
+++ b/.github/workflows/upload_lambda_edge.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set Env for staging
+      - name: Set env for staging
         if: ${{ inputs.environment == 'staging' }}
         run: |
           echo "AWS_LAMBDA_FUNCTION_ARN=${{ secrets.STAGING_AWS_LAMBDA_EDGE_RESPONSE_HEADER_ARN }}" >> $GITHUB_ENV
@@ -27,7 +27,7 @@ jobs:
           echo "PEPPER_EVENT=${{ secrets.STAGING_PEPPER_EVENT }}" >> $GITHUB_ENV
           echo "SITE_DOMAIN=${{ secrets.STAGING_SITE_DOMAIN }}" >> $GITHUB_ENV
 
-      - name: Set Env for production
+      - name: Set env for production
         if: ${{ inputs.environment == 'production' }}
         run: |
           echo "AWS_LAMBDA_FUNCTION_ARN=${{ secrets.PRODUCTION_AWS_LAMBDA_EDGE_RESPONSE_HEADER_ARN }}" >> $GITHUB_ENV
