--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,6 +25,7 @@
     "@types/react-calendar": "^3.9.0",
     "destyle.css": "^4.0.0",
     "react-calendar": "^4.2.1",
+    "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1"
   }
 }
