fixed workflows node version

--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Deployment environment'
+        description: "Deployment environment"
         required: true
         type: choice
         options:
@@ -21,7 +21,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: "18.16"
 
       - name: Set env for staging
         if: ${{ inputs.environment == 'staging' }}
