--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -15,6 +15,7 @@
     "ts-jest": "^29.1.0"
   },
   "dependencies": {
+    "@aws-sdk/client-sns": "^3.359.0",
     "@trpc/client": "^10.20.0",
     "@trpc/server": "^10.20.0",
     "domain": "*",
