--- a/apps/edge/package.json
+++ b/apps/edge/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "ts-node src/launch.ts",
-    "dev": "nodemon -w . -w ../../packages -i ../../packages/ui src/index.ts",
+    "dev": "nodemon -w . -w ../../packages -i ../../packages/ui src/lambda.ts",
     "build-lambda": "esbuild src/lambda.ts --bundle --minify --platform=node --target=es2020 --outfile=dist/index.js",
     "lint": "TIMING=1 eslint .",
     "type-check": "tsc --noEmit"
