--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -36,10 +36,10 @@ jobs:
       - name: Install Dependencies
 
         run: |
-          yarn global add turbo@1.10.3 prisma@4.15.0
+          npm install -g turbo@1.10.3 prisma@4.15.0
           rm -rf ./apps
           rm -rf ./packages
-          yarn install
+          npm ci --only=production --ignore-scripts
 
       - name: Build
         env:
