--- a/.github/workflows/upload_lambda_edge.yml
+++ b/.github/workflows/upload_lambda_edge.yml
@@ -47,10 +47,10 @@ jobs:
           rm -rf ./apps/web
 
       - name: Install Dependencies
-        run: yarn workspace edge install
+        run: npm ci --only=production --ignore-scripts -workspace=edge
 
       - name: Build
-        run: yarn workspace edge build-lambda
+        run: npm build-lambda -workspace=edge
 
       - name: Pur ENV
         run: echo -e "DATABASE_URL=\"${{ env.DATABASE_URL }}\"\nPEPPER_EVENT=\"${{ env.PEPPER_EVENT }}\"\nSITE_DOMAIN=\"${{ env.SITE_DOMAIN }}\"" > ./apps/edge/dist/.env
