--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
-    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.28",
