fixed npm command

--- a/.github/workflows/deploy_s3.yml
+++ b/.github/workflows/deploy_s3.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Build
         run: |
-          npm build-static -workspace=web
+          npm run build-static -workspace=web
           rm -rf ./apps/web/out/e/\[p\]/
 
       - name: Deploy
