--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -12,13 +12,13 @@
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "@types/uuid": "^9.0.1",
+    "eslint-config-custom": "*",
     "jest": "^29.5.0",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.0",
+    "tsconfig": "*",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "eslint-config-custom": "*",
-    "tsconfig": "*",
-    "typescript": "^4.9.5",
     "uuid": "^9.0.0"
   }
 }
