--- a/.github/workflows/deploy_s3.yml
+++ b/.github/workflows/deploy_s3.yml
@@ -45,6 +45,8 @@ jobs:
         run: npm ci --only=production --ignore-scripts -workspace=web
 
       - name: Build
+        env:
+          NODE_ENV: production
         run: |
           npm run build-static -workspace=web
           rm -rf ./apps/web/out/e/\[p\]/
