--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "date-fns": "^3.3.1",
     "destyle.css": "^4.0.0",
     "react": "^18.2.0",
     "react-calendar": "^4.3.0",
