--- a/.github/workflows/push_lambda_server_image.yml
+++ b/.github/workflows/push_lambda_server_image.yml
@@ -9,27 +9,40 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup node
-        uses: actions/setup-node@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          node-version: "18.16"
+          role-to-assume: ${{ secrets.ENV_AWS_ASSUME_ROLE }}
+          aws-region: ${{ vars.ENV_AWS_REGION }}
 
-      - name: Login
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.ENV_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.ENV_AWS_SECRET_ACCESS_KEY }}
-          AWS_ECR_HOST: ${{ secrets.ENV_AWS_ECR_HOST }}
-        run: aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${AWS_ECR_HOST}
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build
-        env:
-          REGISTRY_NAME: ${{ secrets.ENV_REGISTRY_NAME }}
-        run: docker build -f ./deploy/lambda/Dockerfile -t ${REGISTRY_NAME} --platform=x86_64 .
+      - name: Setup Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Push
-        env:
-          AWS_ECR_HOST: ${{ secrets.ENV_AWS_ECR_HOST }}
-          REGISTRY_NAME: ${{ secrets.ENV_REGISTRY_NAME }}
+      - name: Setup Cache
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: buildx-${{ github.sha }}
+          restore-keys: |
+            buildx-
+
+      - name: Build and Push
+        uses: docker/build-push-action@v5
+        with:
+          file: ./deploy/aws/lambda/Dockerfile
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+          tags: |
+            ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ENV_REGISTRY_NAME }}:${{ github.sha }}
+            ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ENV_REGISTRY_NAME }}:${{ vars.TAG_DEPLOY }}
+          push: true
+          provenance: false
+
+      - name: Move cache
         run: |
-          docker tag ${REGISTRY_NAME}:latest ${AWS_ECR_HOST}/${REGISTRY_NAME}:deploy
-          docker push ${AWS_ECR_HOST}/${REGISTRY_NAME}:deploy
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
