--- a/.github/workflows/push_lambda_server_image.yml
+++ b/.github/workflows/push_lambda_server_image.yml
@@ -1,6 +1,9 @@
 name: Push Lambda Server Image
 on: workflow_dispatch
 
+permissions:
+  id-token: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
