--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "next": "14.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.0.23",
+    "storybook": "^8.1.9",
     "ui": "*"
   },
   "devDependencies": {
@@ -28,7 +29,7 @@
     "@storybook/jest": "^0.1.0",
     "@storybook/react": "^7.0.23",
     "@storybook/react-vite": "^7.0.23",
-    "@storybook/test-runner": "^0.11.0",
+    "@storybook/test-runner": "^0.18.2",
     "@storybook/testing-library": "^0.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
