--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
-    "next": "14.2.4",
+    "next": "^14.2.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^8.1.9",
